fix navbar overflow

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,6 +9,7 @@
 .navbar .container {
   display: flex;
   align-items: center;
+  overflow-x: scroll;
 }
 
 .navbar .links {
